Save style changes

--- a/source/stylesheets/app.less
+++ b/source/stylesheets/app.less
@@ -27,7 +27,8 @@
 @import "../../bower_components/bootstrap/less/glyphicons.less";
 
 // Core CSS
-@import "../../bower_components/bootstrap/less/scaffolding.less";
+@import "pages/_scaffolding";
+// @import "../../bower_components/bootstrap/less/_scaffolding.less";
 @import "../../bower_components/bootstrap/less/type.less";
 @import "../../bower_components/bootstrap/less/code.less";
 @import "../../bower_components/bootstrap/less/grid.less";
