--- a/source/stylesheets/pages/_scaffolding.less
+++ b/source/stylesheets/pages/_scaffolding.less
@@ -28,8 +28,12 @@ body {
   font-family: @font-family-base;
   font-size: @font-size-base;
   line-height: @line-height-base;
-  color: @text-color;
+  /*color: @text-color;*/
   background-color: @body-bg;
+	font-family: Arial, "Trebuchet MS", Helvetica, sans-serif;
+	position: relative;
+	color: white;
+	line-height: 1.6;
 }
 
 // Reset fonts for relevant elements
@@ -46,6 +50,7 @@ textarea {
 // Links
 
 a {
+/*
   color: @link-color;
   text-decoration: none;
 
@@ -58,6 +63,7 @@ a {
   &:focus {
     .tab-focus();
   }
+  */
 }
 
 
