--- a/source/stylesheets/pages/header/header.less
+++ b/source/stylesheets/pages/header/header.less
@@ -34,6 +34,7 @@
 	&__link {
 		line-height: 1.0;
 		position: relative;
+		text-decoration: none;
 		z-index: 999;
 		.icons {
 			margin-right: 15px;
